handle mouse lock inside webview better

--- a/Client/WebQuake.htm
+++ b/Client/WebQuake.htm
@@ -37,9 +37,14 @@ canvas {
 }
 </style>
 </head>
-<body style="cursor: none;">
+<body style="cursor: none; background-color:#000; color:white">
 <div>
-<span id="progress">Starting Quake...</span>
+  <span id="progress">
+<pre>
+C:\GAMES\QUAKE\QUAKE.EXE
+ Loading ...  
+</pre>
+  </span>
 <div id="end" style="color: white; font-family: monospace; text-align: center;">
 <span id="end1" style="display: none;">                QUAKE: The Doomed Dimension <span style="color: yellow;">by <span style="background-color: navy;">id</span> Software               <span style="color: gray;">v1.09</span>  
   ----------------------------------------------------------------------------  
