audio element memory leak

--- a/Client/WebQuake.htm
+++ b/Client/WebQuake.htm
@@ -38,7 +38,8 @@ canvas {
 </style>
 </head>
 <body style="cursor: none; background-color:#000; color:white">
-<div>
+<div id="audioholder" style="display:none"></div>
+  <div>
   <span id="progress">
 <pre>
 C:\GAMES\QUAKE\QUAKE.EXE
